# johnny_eight

./: .gitignore  Cargo.toml  LICENSE  README.md
fixtures/: chip_8_logo.txt  chip_8_picture.txt  hexify.rb
src/: bin.rs  boot.rs  display.rs  gfx.rs  instructions.rs  keypad.rs  lib.rs  opcodes.rs  vm.rs
src/vm/: bootstrap.rs  mod.rs  runtime.rs  specs.rs  tests.rs
